2010-03-19  Dirk Pranke  <dpranke@chromium.org>

        Reviewed by Dimitri Glazkov.

        Disable the downstream override expectations temporarily to allow
        us to test that we've upstreamed everything correctly. Also, stop
        looking at the downstream baselines at all (now you will only be
        able to update baselines upstream). In theory this should work, but
        if we need to we can always add the downstream dirs back in.

        https://bugs.webkit.org/show_bug.cgi?id=36396

        * Scripts/webkitpy/layout_tests/port/chromium.py:
        * Scripts/webkitpy/layout_tests/port/chromium_linux.py:
        * Scripts/webkitpy/layout_tests/port/chromium_mac.py:
        * Scripts/webkitpy/layout_tests/port/chromium_win.py:

2010-03-19  Dirk Pranke  <dpranke@chromium.org>

        Reviewed by Dimitri Glazkov.

        fix typo in chromium test expectations overrides routine
        https://bugs.webkit.org/show_bug.cgi?id=36397

        * Scripts/webkitpy/layout_tests/port/chromium.py:

2010-03-19  Dirk Pranke  <dpranke@chromium.org>

        Reviewed by Dimitri Glazkov.

>>>>>>> .r56286
        Flip the Chromium ports to look first for the test expectations
        in LayoutTests/platform/chromium and only afterwards look in the
        Chromium repo downstream for overrides.

        https://bugs.webkit.org/show_bug.cgi?id=36326

        * Scripts/webkitpy/layout_tests/port/chromium.py:

2010-03-19  James Hawkins  <jhawkins@chromium.org>

        Unreviewed.

        Add myself to the committers list.

        * Scripts/webkitpy/committers.py:

2010-03-19  Adam Barth  <abarth@webkit.org>

        Unreviewed.

        Fix SheriffBot exception lock when we can't retrieve the first build
        from buildbot.  (I'll ask Eric to review this change after the fact,
        but he's at lunch and I want to get the bot unlocked.)

        * Scripts/webkitpy/buildbot.py:
        * Scripts/webkitpy/buildbot_unittest.py:
